# crypto-backtester

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
backtest/: symbol_list.py  v1_ls_bt.py  v1_pairs_bt.py
backtest/example/: example.py  v1_hold.py
backtest/position_managers/: example.py  v1_ls_pm.py
backtest/strategies/: v1_ls.py  v1_pairs.py
docs/: index.md  overview.md
docs/methods/: PositionManager.filter_orders.md
examples/: 01_simple_backtest.py  02_momentum_strategy.py  03_long_short_strategy.py  README.md  example.ipynb  position_manager.py
src/: example.ipynb
src/crypto_backtester_binance/: __init__.py  backtester.py  format_utils.py  hist_data.py  my_backtester.py  oms_simulation.py  position_manager.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_backtester.py  test_format_utils.py  test_hist_data.py  test_oms_simulation.py  test_position_manager.py  test_utils.py
